@@ -2,6 +2,7 @@
 - Add blur effect settings
 - Add Up Next support
 - Add Next Aired 7.0.1 support
+- Corner icon choices for fixed width horizontal menus
 
 0.9.45
 - Updates to Sets info
